[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/gfx/characters/character2.png" type="Texture" id=1]
[ext_resource path="res://source/actors/Player.gd" type="Script" id=2]
[ext_resource path="res://source/weapons/Weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/resources/player_animation_run.tres" type="Animation" id=4]
[ext_resource path="res://assets/resources/player_animation_idle.tres" type="Animation" id=5]
[ext_resource path="res://assets/fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/gfx/misc/player_health.png" type="Texture" id=7]
[ext_resource path="res://assets/gfx/misc/player_health_back.png" type="Texture" id=8]
[ext_resource path="res://assets/gfx/misc/rip.png" type="Texture" id=9]
[ext_resource path="res://assets/resources/player_animation_die.tres" type="Animation" id=10]
[ext_resource path="res://assets/audio/step.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/audio/jump.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.61938, 6.56243 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.57916, 9.54862 )

[sub_resource type="Animation" id=3]
resource_name = "player_animation_still"

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 6 )

[node name="Player2" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 2147483663
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.25, 0.437428 )
shape = SubResource( 1 )

[node name="Pivot" type="Node2D" parent="."]
position = Vector2( 0, 5.08628 )
rotation = 0.0872665

[node name="Sprite" type="Sprite" parent="Pivot"]
position = Vector2( 0, -5.10411 )
texture = ExtResource( 1 )

[node name="Rip" type="Sprite" parent="Pivot"]
visible = false
modulate = Color( 0.454902, 0.454902, 0.454902, 1 )
position = Vector2( 0, 4 )
rotation = 0.011947
scale = Vector2( 1, 0.133333 )
texture = ExtResource( 9 )
centered = false
offset = Vector2( -8, -16 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, 5.96046e-08 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.8, 0.8 )
smoothing_enabled = true

[node name="TweenCameraZoom" type="Tween" parent="Camera2D"]

[node name="Weapon" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -2.12132 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/player_animation_die = ExtResource( 10 )
anims/player_animation_idle = ExtResource( 5 )
anims/player_animation_run = ExtResource( 4 )
anims/player_animation_still = SubResource( 3 )

[node name="NameLabel" type="Label" parent="."]
margin_left = -16.8718
margin_top = -28.4342
margin_right = 17.1282
margin_bottom = -18.4342
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 4 )
text = "Player 2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="HealthBar" type="TextureProgress" parent="."]
modulate = Color( 0.388235, 0.780392, 0.301961, 1 )
margin_left = -17.0
margin_top = -17.0
margin_right = 17.0
margin_bottom = -12.0
max_value = 200.0
value = 200.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FootstepPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="JumpPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
